[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hydro_relic374"
version = "0.0.2"
authors = [
     { name="Relic374", email="magmis358@gmail.com" }
]
description = "An easy & simple way to package electron apps"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
]
dependencies = [
     'termcolor'
]

[project.urls]
"Homepage" = "https://github.com/relic374/hydro"
"Bug Tracker" = "https://github.com/relic374/hydro/issues"

